--- a/demo-web/src/main/resources/application.yml
+++ b/demo-web/src/main/resources/application.yml
@@ -2,6 +2,7 @@
 server:
   port: 8082
 
+# 数据库访问配置,主数据源，默认的
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
@@ -33,33 +34,6 @@ spring:
       connect-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
       # 合并多个DruidDataSource的监控数据
       use-global-data-source-stat: true
-
-motan :
-  #注册中心配置
-  registry :
-    regProtocol : direct
-    address : localhost:9999
-    #regProtocol : zookeeper #注册中心协议
-    #address : 127.0.0.1:2181 #注册中心地址
-    #requestTimeout : 1000 #注册中心连接超时时间(毫秒)
-    #connectTimeout : 3000 #注册中心请求超时时间(毫秒)
-  #协议配置
-  protocol :
-    name : motan #协议名称
-    minWorkerThread : 20 #最小工作pool线程数
-    maxWorkerThread : 50 #最大工作pool线程数
-    filter : statistic
-  #指定需要解析的包名
-  annotation :
-    package : com.demo.facade
-  #客户端配置
-  client :
-    protocol : demoMotan
-    group : demoGroup
-    check : false
-    requestTimeout : 30000 #请求超时时间(毫秒)
-    connectTimeout : 5000 #连接超时时间(毫秒)
-    registry : demoRegistryConfig
 
 logging:
   config : classpath:config/log/log4j2.xml
