--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
         <version.druid.starter>1.1.10</version.druid.starter>
         <version.mybatisplus.starter>3.0.7.1</version.mybatisplus.starter>
+        <version.dubbo.starter>0.2.0</version.dubbo.starter>
         <version.mysql>5.1.45</version.mysql>
         <version.motan>0.2.3</version.motan>
         <version.tomcat.embed>8.5.31</version.tomcat.embed>
@@ -36,6 +37,7 @@
     <modules>
         <module>demo-common</module>
         <module>demo-api</module>
+        <module>demo-api-impl</module>
         <module>demo-service</module>
         <module>demo-web</module>
         <module>demo-task</module>
