--- a/demo-service/pom.xml
+++ b/demo-service/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>com.wt.demo</groupId>
 		<artifactId>demo-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../demo-parent/pom.xml</relativePath>
 	</parent>
 
 	<name>demo-service</name>
