--- a/demo-web/src/main/resources/application.yml
+++ b/demo-web/src/main/resources/application.yml
@@ -12,8 +12,8 @@ spring:
     password: root
     # 初始化大小，最小，最大
     druid:
-      initial-size: 1
-      min-idle: 1
+      initial-size: 10
+      min-idle: 5
       max-active: 20
       # 配置获取连接等待超时的时间
       max-wait: 60000
@@ -29,11 +29,32 @@ spring:
       pool-prepared-statements: true
       max-pool-prepared-statement-per-connection-size: 20
       # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-      filters: stat,wall
+      filters: stat
       # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
       connect-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
       # 合并多个DruidDataSource的监控数据
       use-global-data-source-stat: true
+      # 配置DruidStatFilter
+      web-stat-filter:
+        enabled: true
+        url-pattern: "/*"
+        exclusions: "*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*"
+      # 配置DruidStatViewServlet
+      stat-view-servlet:
+        url-pattern: "/druid/*"
+        # IP白名单(没有配置或者为空，则允许所有访问)
+        allow: 127.0.0.1
+        # IP黑名单 (存在共同时，deny优先于allow)
+        deny:
+        #  禁用HTML页面上的“Reset All”功能
+        reset-enable: false
+        # 登录名
+        login-username: admin
+        # 登录密码
+        login-password: 123456
 
 logging:
   config : classpath:config/log/log4j2.xml
+
+mybatis:
+    config-locations: classpath:mybatisplus.yml
