--- a/demo-web/src/main/resources/application.yml
+++ b/demo-web/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     url: jdbc:mysql://localhost:3306/wttest?useUnicode=true&amp;characterEncoding=UTF-8
     username: root
     password: root
+    transaction:
+        rollback-on-commit-failure: true
     # 初始化大小，最小，最大
     druid:
       initial-size: 10
