--- a/demo-task/src/main/resources/application.yml
+++ b/demo-task/src/main/resources/application.yml
@@ -34,49 +34,6 @@ spring:
       # 合并多个DruidDataSource的监控数据
       use-global-data-source-stat: true
 
-regCenter:
-  # zookeeper 集群配置,单个就写单个，多个就用逗号分隔
-  serverlists: localhost:2181,localhost:2182
-  # zookeeper 命名空间，用于区分不同的服务
-  namespace: boot-job
-
-# 具体的job配置，也可配置在代码中，根据个人需要，多个job需要多个配置，如 stockJob1:
-# 更多参数详见elasticjob官方文档配置
-stockJob:
-  # cron  为定时任务的cron表达式；
-  cron: 0/5 * * * * ?
-  # shardingTotalCount  为任务的分数量（即同时同时开几个定时任务）；
-  shardingTotalCount: 3
-  # shardingItemParameters  为任务分片携带的参数；
-  shardingItemParameters: 0=红,1=绿,2=蓝
-
-#motan :
-#  #注册中心配置
-#  registry :
-#    regProtocol : direct
-#    address : localhost:9999
-#    #regProtocol : zookeeper #注册中心协议
-#    #address : 127.0.0.1:2181 #注册中心地址
-#    #requestTimeout : 1000 #注册中心连接超时时间(毫秒)
-#    #connectTimeout : 3000 #注册中心请求超时时间(毫秒)
-#  #协议配置
-#  protocol :
-#    name : motan #协议名称
-#    minWorkerThread : 20 #最小工作pool线程数
-#    maxWorkerThread : 50 #最大工作pool线程数
-#    filter : statistic
-#  #指定需要解析的包名
-#  annotation :
-#    package : com.demo.facade
-#  #客户端配置
-#  client :
-#    protocol : demoMotan
-#    group : demoGroup
-#    check : false
-#    requestTimeout : 30000 #请求超时时间(毫秒)
-#    connectTimeout : 5000 #连接超时时间(毫秒)
-#    registry : demoRegistryConfig
-
 dubbo:
   application:
     name: auth-consumer
@@ -93,6 +50,18 @@ dubbo:
 #检查服务是否可用默认为true，不可用时抛出异常，阻止spring初始化，为方便部署，可以改成false
  consumer:
     check: false
+
+xxl:
+    job:
+        executor:
+             appname: xxl-job-demo
+             ip:
+             port: 9001
+             logpath: /var/log/geekplus/xxl-job/jobhandler
+             logretentiondays: 7
+        accessToken: geekplus-token
+        admin:
+             addresses: http://localhost:8089/xxl-job-console
 
 logging:
   config: classpath:config/log/log4j2.xml
