elistic-job更换位xxl-job

--- a/demo-task/src/main/resources/application.yml
+++ b/demo-task/src/main/resources/application.yml
@@ -56,12 +56,12 @@ xxl:
         executor:
              appname: xxl-job-demo
              ip:
-             port: 9001
-             logpath: /var/log/geekplus/xxl-job/jobhandler
+             port: 9999
+             logpath: /data/applogs/xxl-job/jobhandler
              logretentiondays: 7
-        accessToken: geekplus-token
+        accessToken:
         admin:
-             addresses: http://localhost:8089/xxl-job-console
+             addresses: http://127.0.0.1:8089/xxl-job-console
 
 logging:
   config: classpath:config/log/log4j2.xml
