--- a/demo-web/src/main/resources/application.yml
+++ b/demo-web/src/main/resources/application.yml
@@ -55,6 +55,50 @@ spring:
         # 登录密码
         login-password: 123456
 
+motan :
+  #注册中心配置
+  registry :
+    regProtocol : direct
+    address : localhost:9999
+    #regProtocol : zookeeper #注册中心协议
+    #address : 127.0.0.1:2181 #注册中心地址
+    #requestTimeout : 1000 #注册中心连接超时时间(毫秒)
+    #connectTimeout : 3000 #注册中心请求超时时间(毫秒)
+  #协议配置
+  protocol :
+    name : motan #协议名称
+    minWorkerThread : 20 #最小工作pool线程数
+    maxWorkerThread : 50 #最大工作pool线程数
+    filter : statistic
+  #指定需要解析的包名
+  annotation :
+    package : com.demo.facade
+  #客户端配置
+  client :
+    protocol : demoMotan
+    group : demoGroup
+    check : false
+    requestTimeout : 30000 #请求超时时间(毫秒)
+    connectTimeout : 5000 #连接超时时间(毫秒)
+    registry : demoRegistryConfig
+
+#dubbo:
+#  application:
+#    name: auth-consumer
+#  protocol:
+#    name: dubbo
+##注册中心地址
+#  registry:
+#    address: zookeeper://127.0.0.1:2181 | zookeeper://127.0.0.1:2182
+##调用dubbo组建扫描的项目路径
+#  scan: com.demo.facade
+##telnet端口
+#  qos:
+#    port: 22222
+##检查服务是否可用默认为true，不可用时抛出异常，阻止spring初始化，为方便部署，可以改成false
+# consumer:
+#    check: false
+
 logging:
   config : classpath:config/log/log4j2.xml
 
