--- a/demo-api-impl/src/main/resources/application.yml
+++ b/demo-api-impl/src/main/resources/application.yml
@@ -26,6 +26,7 @@ server:
 #    registry : demoRegistryConfig
 
 # 数据库访问配置,主数据源，默认的
+# 数据库访问配置,主数据源，默认的
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
@@ -33,10 +34,12 @@ spring:
     url: jdbc:mysql://localhost:3306/wttest?useUnicode=true&amp;characterEncoding=UTF-8
     username: root
     password: root
+    transaction:
+        rollback-on-commit-failure: true
     # 初始化大小，最小，最大
     druid:
-      initial-size: 1
-      min-idle: 1
+      initial-size: 10
+      min-idle: 5
       max-active: 20
       # 配置获取连接等待超时的时间
       max-wait: 60000
@@ -52,30 +55,71 @@ spring:
       pool-prepared-statements: true
       max-pool-prepared-statement-per-connection-size: 20
       # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-      filters: stat,wall
+      filters: stat
       # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
       connect-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
       # 合并多个DruidDataSource的监控数据
       use-global-data-source-stat: true
+      # 配置DruidStatFilter
+      web-stat-filter:
+        enabled: true
+        url-pattern: "/*"
+        exclusions: "*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*"
+      # 配置DruidStatViewServlet
+      stat-view-servlet:
+        url-pattern: "/druid/*"
+        # IP白名单(没有配置或者为空，则允许所有访问)
+        allow: 127.0.0.1
+        # IP黑名单 (存在共同时，deny优先于allow)
+        deny:
+        #  禁用HTML页面上的“Reset All”功能
+        reset-enable: false
+        # 登录名
+        login-username: admin
+        # 登录密码
+        login-password: 123456
 
-dubbo:
-  application:
-#注册在注册中心的名称，唯一标识，请勿重复
-    id: auth-provider
-    name: auth-provider
-#注册中心地址，zookeeper集群，启动输出可以看见链接了多个
-#单zookeeper服务：zookeeper://127.0.0.1:2181
-  registry:
-    address: zookeeper://127.0.0.1:2181 | zookeeper://127.0.0.1:2182
-#暴露服务方式
-  protocol:
-    id: dubbo
-#默认名称，勿修改
-    name: dubbo
-    port: 20880
-#暴露服务端口 （默认是20880，修改端口，不同的服务提供者端口不能重复）
-#调用dubbo组建扫描的项目路径
-  scan: com.demo.facade
+motan :
+  #注册中心配置
+  registry :
+    regProtocol : local
+    #regProtocol : zookeeper #注册中心协议
+    #address : 127.0.0.1:2181 #注册中心地址
+    #requestTimeout : 1000 #注册中心连接超时时间(毫秒)
+    #connectTimeout : 3000 #注册中心请求超时时间(毫秒)
+  #协议配置
+  protocol :
+    name : motan #协议名称
+    minWorkerThread : 20 #最小工作pool线程数
+    maxWorkerThread : 50 #最大工作pool线程数
+    filter : statistic
+  #指定需要解析的包名
+  annotation :
+    package : com.demo.facade
+  #服务端配置
+  server :
+    export :  'demoMotan:9999' #服务端口
+    group : demoGroup
+    registry : demoRegistryConfig
+
+#dubbo:
+#  application:
+##注册在注册中心的名称，唯一标识，请勿重复
+#    id: auth-provider
+#    name: auth-provider
+##注册中心地址，zookeeper集群，启动输出可以看见链接了多个
+##单zookeeper服务：zookeeper://127.0.0.1:2181
+#  registry:
+#    address: zookeeper://127.0.0.1:2181 | zookeeper://127.0.0.1:2182
+##暴露服务方式
+#  protocol:
+#    id: dubbo
+##默认名称，勿修改
+#    name: dubbo
+#    port: 20880
+##暴露服务端口 （默认是20880，修改端口，不同的服务提供者端口不能重复）
+##调用dubbo组建扫描的项目路径
+#  scan: com.demo.facade
 
 logging:
   config: classpath:config/log/log4j2.xml
