--- a/demo-task/pom.xml
+++ b/demo-task/pom.xml
@@ -29,6 +29,26 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- Spring Boot Dubbo 依赖
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency> -->
+
+		<!-- motan rpc -->
+		<dependency>
+			<groupId>com.weibo</groupId>
+			<artifactId>motan-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weibo</groupId>
+			<artifactId>motan-transport-netty</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weibo</groupId>
+			<artifactId>motan-springsupport</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>com.wt.demo</groupId>
 			<artifactId>demo-api</artifactId>
