--- a/demo-web/pom.xml
+++ b/demo-web/pom.xml
@@ -30,7 +30,27 @@
 		</dependency>
 		<dependency>
 			<groupId>com.wt.demo</groupId>
-			<artifactId>demo-service</artifactId>
+			<artifactId>demo-api</artifactId>
+		</dependency>
+
+		<!-- Spring Boot Dubbo 依赖
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency> -->
+
+		<!-- motan rpc -->
+		<dependency>
+			<groupId>com.weibo</groupId>
+			<artifactId>motan-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weibo</groupId>
+			<artifactId>motan-transport-netty</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weibo</groupId>
+			<artifactId>motan-springsupport</artifactId>
 		</dependency>
 	</dependencies>
 
